Fixed a bug where text on delete pantry button was the wrong color when hovering over it

--- a/src/main/resources/static/css/acorn.css
+++ b/src/main/resources/static/css/acorn.css
@@ -99,6 +99,7 @@ h2 {
 }
 
 .btn-delete:hover {
+    color: var(--white);
     background-color: #fd6a79;
 }
 
